--- a/Negocio/Inventario/templates/Inventario/base.html
+++ b/Negocio/Inventario/templates/Inventario/base.html
@@ -17,23 +17,35 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}"><i class="fa-solid fa-list fa-lg"></i> Listar Productos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add' %}"><i class="fa-solid fa-plus fa-lg"></i> Agregar Productos</a>
               </li>
-              
+              {% endif %}
             </ul>
             <form class="d-flex">
-              <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa-solid fa-user fa-lg"></i> Login</button>
+              {% if request.user.is_authenticated %}
+              <a class="btn btn-primary my-2 my-sm-0" href="{% url 'logout' %}"><i class="fa-solid fa-right-to-bracket fa-lg"></i> no c</a>
+              {% else %}
+              <a class="btn btn-primary my-2 my-sm-0" href="{% url 'login' %}"><i class="fa-solid fa-user-plus fa-lg"></i> no c2</a>
+              {% endif %}
             </form>
           </div>
         </div>
     </nav>
     <br>
     <div class="container-fluid">
-        <h3 class="m-4"> Productos</h3>
+        {% if messages %}
+          {% for message in messages %}
+          <div class="alert alert-dismissible alert-success">
+            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <strong>¡Listo!</strong> {{message}}
+          </div>
+          {% endfor %}
+        {% endif %}
         <div class="col-12">
 
             {% block body %}
