--- a/Negocio/Inventario/templates/Inventario/login.html
+++ b/Negocio/Inventario/templates/Inventario/login.html
@@ -11,9 +11,10 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit" class="btn btn-primary" id="submit">Login</button>
+                    <a href="{% url 'register' %}">Registrarse</a>
                 </form>
             </div>
         </div>
     </div>
 </div>
-{% endblok %}
+{% endblock %}
