--- a/Biblioteca/Inventario/templates/Inventario/base.html
+++ b/Biblioteca/Inventario/templates/Inventario/base.html
@@ -18,14 +18,14 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}"><i class="fa-solid fa-list fa-lg"></i> Listar Productos</a>
+                <a class="nav-link" href="{% url 'index' %}"><i class="fa-solid fa-list fa-lg"></i> Listar libros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href=""><i class="fa-solid fa-plus fa-lg"></i> Agregar Productos</a>
+                <a class="nav-link" href="{% url 'add' %}"><i class="fa-solid fa-plus fa-lg"></i> Agregar libros</a>
               </li>
             </ul>
             <form class="d-flex">
-              <a class="btn btn-primary my-2 my-sm-0" href=""><i class="fa-solid fa-right-to-bracket fa-lg"></i> Login</a>
+              <a class="btn btn-primary my-2 my-sm-0" href=""><i class="fa-solid fa-user-plus fa-lg"></i> Login</a>
             </form>
           </div>
         </div>
