--- a/Biblioteca/Inventario/templates/Inventario/register.html
+++ b/Biblioteca/Inventario/templates/Inventario/register.html
@@ -4,7 +4,7 @@
     <div class="col-6">
         <div class="card border-primary mb-3">
             <div class="card-header">
-                <i class="fa-solid fa-user-plus fa-lg"></i> Registro de usuario
+                <i class="fa-solid fa-user-plus fa-lg"></i> Registro de Usuarios
             </div>
             <div class="card-body">
                 <form method="POST">
