--- a/Biblioteca/Inventario/templates/Inventario/base.html
+++ b/Biblioteca/Inventario/templates/Inventario/base.html
@@ -17,29 +17,35 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}"><i class="fa-solid fa-list fa-lg"></i> Listar libros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'add' %}"><i class="fa-solid fa-plus fa-lg"></i> Agregar libros</a>
               </li>
+              {% endif %}
             </ul>
             <form class="d-flex">
-              <a class="btn btn-primary my-2 my-sm-0" href=""><i class="fa-solid fa-user-plus fa-lg"></i> Login</a>
+              {% if request.user.is_authenticated %}
+              <a class="btn btn-primary my-2 my-sm-0" href="{% url 'logout' %}"><i class="fa-solid fa-right-to-bracket fa-lg"></i> Logout</a>
+              {% else %}
+              <a class="btn btn-primary my-2 my-sm-0" href="{% url 'login' %}"><i class="fa-solid fa-user-plus fa-lg"></i> Login</a>
+              {% endif %}
             </form>
           </div>
         </div>
     </nav>
     <br>
     <div class="container-fluid">
-        <!--{% if messages %}
+        {% if messages %}
           {% for message in messages %}
           <div class="alert alert-dismissible alert-success">
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
             <strong>¡Listo!</strong> {{message}}
           </div>
           {% endfor %}
-        {% endif %}-->
+        {% endif %}
         <div class="col-12">
 
             {% block body %}
