--- a/Biblioteca/Inventario/templates/Inventario/login.html
+++ b/Biblioteca/Inventario/templates/Inventario/login.html
@@ -11,7 +11,7 @@
                     {% csrf_token %}
                     {{ form.as_p }}
                     <button type="submit" class="btn btn-primary" id="submit">Login</button>
-                    <a href="{% url 'register' %}">Registrarse</a>
+                    <a href="{% url 'register' %}" class="btn btn-secondary"> Si no tienes una cuenta, ¡Regístrate!</a>
                 </form>
             </div>
         </div>
