--- a/Biblioteca/Inventario/templates/Inventario/add.html
+++ b/Biblioteca/Inventario/templates/Inventario/add.html
@@ -17,8 +17,8 @@
                         <form action="{% url 'add' %}" method="post">
                             {% csrf_token %}
                             {{ form.as_p }}
-                            <button type="submit" class="btn btn-primary"> Agregar</button>
-                            <a href="{% url 'index' %}" class="btn btn-secondary">Cancelar</a>
+                            <button style="border-radius: 5px;" type="submit" class="btn btn-primary"> Agregar</button>
+                            <a href="{% url 'index' %}" class="btn btn-secondary" style="border-radius: 5px;">Cancelar</a>
                         </form>
                     </div>
                 </div>
