--- a/Biblioteca/Inventario/templates/Inventario/base.html
+++ b/Biblioteca/Inventario/templates/Inventario/base.html
@@ -11,7 +11,7 @@
 <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'index' %}"> <i class="fa-sharp fa-solid fa-house fa-xl"></i> Biblioteca</a>
+          <a class="navbar-brand" href="{% url 'index' %}"> <i class="fa-sharp fa-solid fa-house fa-xl"></i> Inicio</a> 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
