--- a/Foro/Publicaciones/templates/Publicaciones/base.html
+++ b/Foro/Publicaciones/templates/Publicaciones/base.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">BlacioBlog</a>
+          <a class="navbar-brand" href="{% url 'index' %}">BlacioBlog</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Inicio
+                <a class="nav-link active" href="{% url 'index' %}">Inicio
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
@@ -26,10 +26,6 @@
                 <a class="nav-link" href="{% url 'add' %}"><i class="fa-solid fa-plus fa-lg"></i> Agregar publicación</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-sm-2" type="search" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
-            </form>
           </div>
         </div>
       </nav>
